Mon Sep 10 14:29:50 CDT 2001  Linas Vepstas <linas@linas.org>

	* idle-timer.[ch], timers.c: detect system idleness, 
	  stop current project after an inactivity timeout.
	* ctree.c: make the arrow keys, the enter key work.
	* journal.c, proj.c: implement cut & paste of memos 
	  in the journal report.

Sat Sep  8 13:05:24 CDT 2001  Linas Vepstas <linas@linas.org>

	* phtml.[ch], ghtml.[ch], journal.c: reimplement reports 
	  with guile interpreter.
	* ghtml.c: provide configurable column titles.
	* journal.c: i18n'ize the paths to the reports

Fri Sep  7 10:51:53 CDT 2001  Linas Vepstas <linas@linas.org>

	* proj.c: misc bug fxes

Tue Sep  4 23:43:02 CDT 2001  Linas Vepstas <linas@linas.org>

	* phtml.c: provide support for configurable report layout,
	  add invoice creation.

	* plug-in.[ch], plugin.glade: define a simple GUI to allow
	  users to add new, user-defined reports.

Tue Sep 04 01:15:32 2001  George Lebl <jirka@5z.com>

	* main.c: Have the "unstable" warning mention release 1.4.0.2 since
	  I'm making 1.4.0.99 so it'd be good to tell users about a version
	  number rather then just a cvs date


Mon Sep  3 22:01:48 CDT 2001  Linas Vepstas <linas@linas.org>

	* proj.c: important little bug fix.

	* proj.c: implement auto-merge of intervals

	* proj.c, journal.c: add ability to insert new 
	  memos into journal.

	* journal.c: add ability to save html to file.

Mon Sep 03 06:15:08 2001  George Lebl <jirka@5z.com>

	* glade/*.c, glade/Makefile.am: the translatable string stuff is now
	  handled by xml-i18n-tools so the string files are not needed


Sun Sep  2 13:27:18 CDT 2001  Linas Vepstas <linas@linas.org>

	* proj.c: fix killer bug that was destroying timer data!
	  Ouch!! (this bug introduced only a few days ago).

	* props-invl.c: add interval edit dialog

	* ctree.*, journal.*, proj.*: add event notification, so that
	  any/all relevent windows are redrawn when data changes.

	* cur-proj.h: start isolating cur-proj, since this global