@@ -24,8 +24,10 @@
 #include <libgnome/gnome-help.h>
 #include <string.h>
 
+#include "ctree.h"
 #include "gtt.h"
 #include "prefs.h"
+#include "toolbar.h"
 #include "util.h"
 
 
@@ -41,15 +43,15 @@ int config_show_tb_tips = 1;
 int config_show_tb_new = 1;
 int config_show_tb_file = 0;
 int config_show_tb_ccp = 0;
+int config_show_tb_journal = 1;
 int config_show_tb_prop = 1;
 int config_show_tb_timer = 1;
 int config_show_tb_pref = 1;
 int config_show_tb_help = 1;
 int config_show_tb_exit = 1;
-int config_show_tb_journal = 1;
 
 char *config_logfile_name = NULL;
-char *config_logfile_str = NULL;
+char *config_logfile_start = NULL;
 char *config_logfile_stop = NULL;
 int config_logfile_use = 0;
 int config_logfile_min_secs = 0;
@@ -96,48 +98,148 @@ typedef struct _PrefsDialog
 
 /* ============================================================== */
 
-static void 
-prefs_set(GnomePropertyBox * pb, gint page, PrefsDialog *dlg)
-{
+#define ENTRY_TO_CHAR(a, b) { 			\
+	char *s = gtk_entry_get_text(a); 	\
+	if (s[0]) {				\
+		if (b) g_free(b); 		\
+		b = g_strdup(s); 		\
+	} else { 				\
+		if (b) g_free(b); 		\
+		b = NULL; 			\
+	} 					\
+}
 
-#if 0
+static void 
+prefs_set(GnomePropertyBox * pb, gint page, PrefsDialog *odlg)
+{
+	int state, change;
+
 	if (0 == page)
 	{
-		gtt_project_freeze (dlg->proj);
-		str = gtk_entry_get_text(dlg->title);
-		if (str && str[0]) 
-		{
-			gtt_project_set_title(dlg->proj, str);
-		} 
-		else 
-		{
-			gtt_project_set_title(dlg->proj, _("empty"));
-			gtk_entry_set_text(dlg->title, _("empty"));
+		/* display options */
+		state = GTK_TOGGLE_BUTTON(odlg->show_secs)->active;
+		if (state != config_show_secs) {
+			config_show_secs = state;
+                	setup_ctree();
+			update_status_bar();
+			if (status_bar)
+			gtk_widget_queue_resize(status_bar);
 		}
+		if (GTK_TOGGLE_BUTTON(odlg->show_status_bar)->active) {
+			gtk_widget_show(GTK_WIDGET(status_bar));
+                	config_show_statusbar = 1;
+		} else {
+			gtk_widget_hide(GTK_WIDGET(status_bar));
+                	config_show_statusbar = 0;
+		}
+        	if (GTK_TOGGLE_BUTTON(odlg->show_clist_titles)->active) {
+                	gtk_clist_column_titles_show(GTK_CLIST(glist));
+                	config_show_clist_titles = 1;
+        	} else {
+                	gtk_clist_column_titles_hide(GTK_CLIST(glist));
+                	config_show_clist_titles = 0;
+        	}
 	
-		gtt_project_set_desc(dlg->proj, gtk_entry_get_text(dlg->desc));
-		gtt_project_set_notes(dlg->proj, xxxgtk_text_get_text(dlg->notes));
-		gtt_project_thaw (dlg->proj);
+        	if (GTK_TOGGLE_BUTTON(odlg->show_subprojects)->active) {
+                	config_show_subprojects = 1;
+			// what in the world is 'show stub' ???
+			// gtk_ctree_set_show_stub(GTK_CTREE(glist), TRUE);
+			gtk_ctree_set_line_style(GTK_CTREE(glist), GTK_CTREE_LINES_SOLID);
+			gtk_ctree_set_expander_style(GTK_CTREE(glist),GTK_CTREE_EXPANDER_SQUARE);
+        	} else {
+			// what in the world is 'show stub' ???
+			// gtk_ctree_set_show_stub(GTK_CTREE(glist), FALSE);
+			gtk_ctree_set_line_style(GTK_CTREE(glist), GTK_CTREE_LINES_NONE);
+			gtk_ctree_set_expander_style(GTK_CTREE(glist),GTK_CTREE_EXPANDER_NONE);
+                	config_show_subprojects = 0;
+        	}
 	}
 
 	if (1 == page)
 	{
-		gtt_project_freeze (dlg->proj);
-		rate = atof (gtk_entry_get_text(dlg->regular));
-		gtt_project_set_billrate (dlg->proj, rate);
-		gtt_project_thaw (dlg->proj);
+		/* shell command options */
+		ENTRY_TO_CHAR(odlg->command, config_command);
+		ENTRY_TO_CHAR(odlg->command_null, config_command_null);
 	}
-	
+
 	if (2 == page)
 	{
-		gtt_project_freeze (dlg->proj);
-		ivl = atoi (gtk_entry_get_text(dlg->minvl));
-		gtt_project_set_min_interval (dlg->proj, ivl);
-		gtt_project_thaw (dlg->proj);
+		/* log file options */
+		config_logfile_use = GTK_TOGGLE_BUTTON(odlg->logfileuse)->active;
+		ENTRY_TO_CHAR(GTK_ENTRY(gnome_file_entry_gtk_entry(odlg->logfilename)),
+		      	config_logfile_name);
+		ENTRY_TO_CHAR(GTK_ENTRY(gnome_entry_gtk_entry(odlg->logfilestart)),
+		      	config_logfile_start);
+		ENTRY_TO_CHAR(GTK_ENTRY(gnome_entry_gtk_entry(odlg->logfilestop)),
+		      	config_logfile_stop);
+		config_logfile_min_secs = atoi(gtk_entry_get_text(GTK_ENTRY(odlg->logfileminsecs)));
 	}
-#endif
-}
 
+	if (3 == page)
+	{
+        	/* toolbar */
+		config_show_tb_icons = GTK_TOGGLE_BUTTON(odlg->show_tb_icons)->active;
+		config_show_tb_texts = GTK_TOGGLE_BUTTON(odlg->show_tb_texts)->active;
+        	config_show_tb_tips = GTK_TOGGLE_BUTTON(odlg->show_tb_tips)->active;
+	
+        	/* toolbar sections */
+        	change = 0;
+        	state = GTK_TOGGLE_BUTTON(odlg->show_tb_new)->active;
+        	if (config_show_tb_new != state) {
+                	change = 1;
+                	config_show_tb_new = state;
+        	}
+        	state = GTK_TOGGLE_BUTTON(odlg->show_tb_file)->active;
+        	if (config_show_tb_file != state) {
+                	change = 1;
+                	config_show_tb_file = state;
+        	}
+        	state = GTK_TOGGLE_BUTTON(odlg->show_tb_ccp)->active;
+        	if (config_show_tb_ccp != state) {
+                	change = 1;
+                	config_show_tb_ccp = state;
+        	}
+        	state = GTK_TOGGLE_BUTTON(odlg->show_tb_journal)->active;
+        	if (config_show_tb_journal != state) {
+                	change = 1;
+                	config_show_tb_journal = state;
+        	}
+        	state = GTK_TOGGLE_BUTTON(odlg->show_tb_prop)->active;
+        	if (config_show_tb_prop != state) {
+                	change = 1;
+                	config_show_tb_prop = state;
+        	}
+        	state = GTK_TOGGLE_BUTTON(odlg->show_tb_timer)->active;
+        	if (config_show_tb_timer != state) {
+                	change = 1;
+                	config_show_tb_timer = state;
+        	}
+        	state = GTK_TOGGLE_BUTTON(odlg->show_tb_pref)->active;
+        	if (config_show_tb_pref != state) {
+                	change = 1;
+                	config_show_tb_pref = state;
+        	}
+        	state = GTK_TOGGLE_BUTTON(odlg->show_tb_help)->active;
+        	if (config_show_tb_help != state) {
+                	change = 1;
+                	config_show_tb_help = state;
+        	}
+        	state = GTK_TOGGLE_BUTTON(odlg->show_tb_exit)->active;
+        	if (config_show_tb_exit != state) {
+                	change = 1;
+                	config_show_tb_exit = state;
+        	}
+        	if (change) {
+                	update_toolbar_sections();
+        	}
+
+		toolbar_set_states();
+	}
+
+	if (4 == page)
+	{
+	}
+}
 
 /* ============================================================== */
 
@@ -188,8 +290,8 @@ options_dialog_set(PrefsDialog *odlg)
 		gtk_entry_set_text(GTK_ENTRY(gnome_file_entry_gtk_entry(odlg->logfilename)), config_logfile_name);
 	else
 		gtk_entry_set_text(GTK_ENTRY(gnome_file_entry_gtk_entry(odlg->logfilename)), "");
-	if (config_logfile_str)
-		gtk_entry_set_text(GTK_ENTRY(gnome_entry_gtk_entry(odlg->logfilestart)), config_logfile_str);
+	if (config_logfile_start)
+		gtk_entry_set_text(GTK_ENTRY(gnome_entry_gtk_entry(odlg->logfilestart)), config_logfile_start);
 	else
 		gtk_entry_set_text(GTK_ENTRY(gnome_entry_gtk_entry(odlg->logfilestart)), "");
 	if (config_logfile_stop)
@@ -413,174 +515,3 @@ prefs_dialog_show(void)
 }
 
 /* ==================== END OF FILE ============================= */
-
-#if 0
-
-/* XXX: this is our main window, perhaps it is a bit ugly this way and
- * should be passed around in the data fields */
-extern GtkWidget *window;
-
-
-#define ENTRY_TO_CHAR(a, b) { char *s = gtk_entry_get_text(a); if (s[0]) { if (b) g_free(b); b = g_strdup(s); } else { if (b) g_free(b); b = NULL; } }
-
-static void options_apply_cb(GnomePropertyBox *pb, gint page, OptionsDlg *odlg)
-{
-	int state, change;
-
-	if ( page != -1 ) return; /* Only do something on global apply */
-
-	/* display options */
-	state = GTK_TOGGLE_BUTTON(odlg->show_secs)->active;
-	if (state != config_show_secs) {
-		config_show_secs = state;
-                setup_ctree();
-		update_status_bar();
-		if (status_bar)
-		gtk_widget_queue_resize(status_bar);
-	}
-	if (GTK_TOGGLE_BUTTON(odlg->show_status_bar)->active) {
-		gtk_widget_show(GTK_WIDGET(status_bar));
-                config_show_statusbar = 1;
-	} else {
-		gtk_widget_hide(GTK_WIDGET(status_bar));
-                config_show_statusbar = 0;
-	}
-        if (GTK_TOGGLE_BUTTON(odlg->show_clist_titles)->active) {
-                gtk_clist_column_titles_show(GTK_CLIST(glist));
-                config_show_clist_titles = 1;
-        } else {
-                gtk_clist_column_titles_hide(GTK_CLIST(glist));
-                config_show_clist_titles = 0;
-        }
-
-        if (GTK_TOGGLE_BUTTON(odlg->show_subprojects)->active) {
-                config_show_subprojects = 1;
-		// what isn the world is 'show stub ???
-		// gtk_ctree_set_show_stub(GTK_CTREE(glist), TRUE);
-		gtk_ctree_set_line_style(GTK_CTREE(glist), GTK_CTREE_LINES_SOLID);
-		gtk_ctree_set_expander_style(GTK_CTREE(glist),GTK_CTREE_EXPANDER_SQUARE);
-        } else {
-		// what isn the world is 'show stub ???
-		// gtk_ctree_set_show_stub(GTK_CTREE(glist), FALSE);
-		gtk_ctree_set_line_style(GTK_CTREE(glist), GTK_CTREE_LINES_NONE);
-		gtk_ctree_set_expander_style(GTK_CTREE(glist),GTK_CTREE_EXPANDER_NONE);
-                config_show_subprojects = 0;
-        }
-
-	/* shell command options */
-	ENTRY_TO_CHAR(odlg->command, config_command);
-	ENTRY_TO_CHAR(odlg->command_null, config_command_null);
-
-	/* log file options */
-	config_logfile_use = GTK_TOGGLE_BUTTON(odlg->logfileuse)->active;
-	ENTRY_TO_CHAR(GTK_ENTRY(gnome_file_entry_gtk_entry(odlg->logfilename)),
-		      config_logfile_name);
-	ENTRY_TO_CHAR(GTK_ENTRY(gnome_entry_gtk_entry(odlg->logfilestr)),
-		      config_logfile_str);
-	ENTRY_TO_CHAR(GTK_ENTRY(gnome_entry_gtk_entry(odlg->logfilestop)),
-		      config_logfile_stop);
-	config_logfile_min_secs = atoi(gtk_entry_get_text(odlg->logfileminsecs));
-
-        /* toolbar */
-	config_show_tb_icons = GTK_TOGGLE_BUTTON(odlg->show_tb_icons)->active;
-	config_show_tb_texts = GTK_TOGGLE_BUTTON(odlg->show_tb_texts)->active;
-        config_show_tb_tips = GTK_TOGGLE_BUTTON(odlg->show_tb_tips)->active;
-
-        /* toolbar sections */
-        change = 0;
-        state = GTK_TOGGLE_BUTTON(odlg->show_tb_new)->active;
-        if (config_show_tb_new != state) {
-                change = 1;
-                config_show_tb_new = state;
-        }
-        state = GTK_TOGGLE_BUTTON(odlg->show_tb_file)->active;
-        if (config_show_tb_file != state) {
-                change = 1;
-                config_show_tb_file = state;
-        }
-        state = GTK_TOGGLE_BUTTON(odlg->show_tb_ccp)->active;
-        if (config_show_tb_ccp != state) {
-                change = 1;
-                config_show_tb_ccp = state;
-        }
-        state = GTK_TOGGLE_BUTTON(odlg->show_tb_prop)->active;
-        if (config_show_tb_prop != state) {
-                change = 1;
-                config_show_tb_prop = state;
-        }
-        state = GTK_TOGGLE_BUTTON(odlg->show_tb_timer)->active;
-        if (config_show_tb_timer != state) {
-                change = 1;
-                config_show_tb_timer = state;
-        }
-        state = GTK_TOGGLE_BUTTON(odlg->show_tb_pref)->active;
-        if (config_show_tb_pref != state) {
-                change = 1;
-                config_show_tb_pref = state;
-        }
-        state = GTK_TOGGLE_BUTTON(odlg->show_tb_help)->active;
-        if (config_show_tb_help != state) {
-                change = 1;
-                config_show_tb_help = state;
-        }
-        state = GTK_TOGGLE_BUTTON(odlg->show_tb_exit)->active;
-        if (config_show_tb_exit != state) {
-                change = 1;
-                config_show_tb_exit = state;
-        }
-        if (change) {
-                update_toolbar_sections();
-        }
-
-	toolbar_set_states();
-}
-
-
-
-
-
-void options_dialog(void)
-{
-	GtkBox *vbox;
-        GtkWidget *w;
-	static OptionsDlg *odlg = NULL;
-	
-	if (!odlg) {
-		char *s;
-		odlg = g_malloc(sizeof(OptionsDlg));
-
-		odlg->dlg = GNOME_PROPERTY_BOX(gnome_property_box_new());
-		s = g_strdup_printf(APP_NAME " - %s", _("Preferences"));
-		gtk_window_set_title(GTK_WINDOW(odlg->dlg), s);
-		g_free (s);
-
-		vbox = (GtkBox *)gtk_vbox_new(FALSE, 0);
-		gtk_widget_show(GTK_WIDGET(vbox));
-		gtk_container_set_border_width(GTK_CONTAINER(vbox), GNOME_PAD);
-                w = gtk_label_new(_("Misc"));
-                gtk_widget_show(w);
-                gtk_notebook_append_page (GTK_NOTEBOOK (odlg->dlg->notebook), 
-					  GTK_WIDGET(vbox), w);
-
-		signals(odlg);
-		display_options(odlg, vbox);
-		logfile_options(odlg, vbox);
-
-		vbox = (GtkBox *)gtk_vbox_new(FALSE, 0);
-		gtk_widget_show(GTK_WIDGET(vbox));
-		gtk_container_set_border_width(GTK_CONTAINER(vbox), 10);
-                w = gtk_label_new(_("Toolbar"));
-                gtk_widget_show(w);
-                gtk_notebook_append_page (GTK_NOTEBOOK (odlg->dlg->notebook), 
-					  GTK_WIDGET(vbox), w);
-                toolbar_options(odlg, vbox);
-
-		gnome_dialog_close_hides(GNOME_DIALOG(odlg->dlg), TRUE);
-		gnome_dialog_set_parent(GNOME_DIALOG(odlg->dlg),
-					GTK_WINDOW(window));
-	}
-	options_dialog_set(odlg);
-	gtk_widget_show(GTK_WIDGET(odlg->dlg));
-}
-
-#endif
