@@ -1,3 +1,8 @@
+Thu Sep 13 13:11:19 CDT 2001  Linas Vepstas <linas@linas.org>
+
+	* prefs.[ch], options.c: transition user preferences
+	  dialog to glade dialog
+
 Mon Sep 10 14:29:50 CDT 2001  Linas Vepstas <linas@linas.org>
 
 	* idle-timer.[ch], timers.c: detect system idleness, 
